<resources>
    <string name="app_name">App Muesmerc </string>
    <string name="empty_state_text">NO HAY DATOS QUE MOSTRAR</string>
    <string name="codigos_no_per">CÓDIGOS NO PERMITIDOS</string>
    <string name="producto">PRODUCTO</string>
    <string name="tamanio">TAMAÑO</string>
    <string name="empaque">EMPAQUE</string>
    <string name="analisis">ANÁLISIS</string>
    <string name="total">TOTAL</string>
    <string name="total_mues">TOT. MUESTRAS</string>
    <string name="ciudad">CIUDAD</string>
    <string name="siglas">SIGLAS</string>
    <string name="fecha_caducidad">FECHA DE CADUCIDAD</string>
    <string name="codigo_producto">CÓDIGO DE PRODUCCIÓN</string>
    <string name="cliente">CLIENTE</string>
    <string name="origen">TOMADO DE</string>
    <string name="costo">COSTO MUESTRA</string>
    <string name="foto_codigo_produccion">FOTO CÓDIGO PRODUCCIÓN</string>
    <string name="azucareS">AZÚCARES</string>
    <string name="energia">ENERGÍA</string>
    <string name="producto_exhibido">PRODUCTO EXHIBIDO</string>
    <string name="foto_num_tienda">MUESTRA CON NÚMERO DE TIENDA Y TAMAÑO</string>
    <string name="marca_traslape">MARCA DEL TRASLAPE</string>
    <string name="atributoa">DAÑO A</string>
    <string name="foto_atributoa">FOTO DAÑO A</string>
    <string name="atributob">DAÑO B</string>
    <string name="foto_atributob">FOTO DAÑO B</string>
    <string name="atributoc">DAÑO C</string>
    <string name="foto_atributoc">FOTO DAÑO C</string>
    <string name="etiqueta_evaluacion">ETIQUETA DE EVALUACIÓN</string>
    <string name="foto_posicion1">FOTO POSICION 1</string>
    <string name="foto_posicion2">FOTO POSICION 2</string>
    <string name="foto_posicion3">FOTO POSICION 3</string>
    <string name="se_compro_producto">¿SE COMPRÓ PRODUCTO?</string>
    <string name="se_compro_segunda">¿SE COMPRÓ SEGUNDA MUESTRA?</string>
    <string name="se_compro_terc">¿SE COMPRÓ TERCERA MUESTRA?</string>
    <string name="se_compro_cuar">¿SE COMPRÓ CUARTA MUESTRA?</string>
    <string name="planta">PLANTA</string>
    <string name="tipo_tienda">TIPO TIENDA</string>
    <string name="nombre_tienda">NOMBRE TIENDA</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="buscar">BUSCAR</string>
    <string name="buscar_tienda">BUSCAR TIENDA</string>
    <string name="title_activity_lista_detalle">LISTA DE COMPRA</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="cancelar">CANCELAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="title_activity_navigation_darawer">NavigationDarawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_descargar">Actualizar</string>
    <string name="menu_ver_lista">Lista de compra</string>
    <string name="menu_abrir_informe">Abrir informe</string>
    <string name="menu_continuar_informe">Continuar informe</string>
    <string name="menu_lista_informe">Resumen informes</string>
    <string name="menu_lista_prep">Resumen preparación</string>
    <string name="menu_lista_etiq">Resumen etiquetado</string>
    <string name="menu_lista_emp">Resumen empaque</string>
    <string name="menu_borrar">Borrar datos</string>
    <string name="menu_borrar_lista">Lista de compras por índice</string>
    <string name="menu_borrar_informe">Informes por índice</string>
    <string name="guardar">GUARDAR</string>
    <string name="cerrar">CERRAR</string>
    <string name="guardarcont">GUARDAR Y CONTINUAR</string>
    <string name="agregar_producto">AGREGAR PRODUCTO</string>
    <string name="ubicar">UBICAR</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="added_informe_message">El informe se guardó correctamente</string>
    <string name="added_informe_error">No se guardó intente de nuevo</string>
    <string name="hello_blank_fragment"></string>
    <string name="error_imagen">Error al subir la imagen</string>
    <string name="action_subirfotos">Enviar</string>
    <string name="pregunta_eliminar_mensaje">¿ESTÁ SEGURO DE ELIMINAR ESTE INFORME?</string>
    <string name="importante">IMPORTANTE</string>
    <string name="resp_cancelar_sinconexion">SE ELIMINÓ EL INFORME</string>
    <string name="informe_abierto">PARA INICIAR UN NUEVO INFORME FINALICE EL ANTERIOR.</string>
    <string name="error_memoria">NO HAY MEMORIA SUFICIENTE PARA ESTA ACCION.</string>
    <string-array name="form_detalle_producto">
        <item>origen</item>
        <item>energia</item>
        <item>costo</item>
        <item>foto_codigo_produccion</item>
        <item>producto_exhibido</item>
        <item>foto_num_tienda</item>
        <item>marca_traslape</item>
        <item>atributoa</item>
        <item>foto_atributoa</item>
        <item>atributob</item>
        <item>foto_atributob</item>
        <item>atributoc</item>
        <item>foto_atributoc</item>
        <item>etiqueta_evaluacion</item>
        <item>comentarios</item>

    </string-array>
    <string name="form_detalle_producto_origen">origen</string>
    <string name="form_detalle_producto_energia">energia</string>
    <string name="form_detalle_producto_costo">costo</string>
    <string name="form_detalle_producto_foto_cod">foto_codigo_produccion</string>
    <string name="form_detalle_producto_prodexhibido">producto_exhibido</string>
    <string name="form_detalle_producto_foto_num">foto_num_tienda</string>
    <string name="form_detalle_producto_marca_tras">marca_traslape</string>
    <string name="form_detalle_producto_atributo_a">atributoa</string>
    <string name="form_detalle_producto_foto_atributoa">foto_atributoa</string>
    <string name="form_detalle_producto_atributob">atributob</string>
    <string name="form_detalle_producto_foto_atributob">foto_atributob</string>
    <string name="form_detalle_producto_atributoc">atributoc</string>
    <string name="form_detalle_producto_foto_atributoc">foto_atributoc</string>
    <string name="form_detalle_producto_etiqueta">etiqueta_evaluacion</string>
    <string name="form_detalle_producto_comentarios">comentarios</string>
    <string name="form_detalle_producto_azucares">azucares</string>
    <string name="form_detalle_producto_qr">qr</string>
    <string name="form_informe_primeramuestra">primeraMuestra</string>
    <string name="form_informe_segundamuestra">segundaMuestra</string>
    <string name="form_informe_comentarios">comentarios</string>
    <string name="form_informe_ticketcompra">ticket_compra</string>
    <string name="form_informe_terceramuestra">terceraMuestra</string>
    <string name="form_informe_condiciones">condiciones_traslado</string>
    <string name="informe_finalizado">INFORME FINALIZADO</string>
    <string name="title_activity_revisar_foto">VER FOTO</string>
    <string name="title_activity_filtrar_lista">FiltrarListaActivity</string>
    <string name="indice">INDICE</string>
    <string name="borrar">BORRAR</string>
    <string name="pregunta_eliminar_informes">UNA VEZ ELIMINADOS LOS DATOS NO PODRÁN RECUPERARSE. ¿ESTÁ SEGURO DE ELIMINAR?</string>
    <string name="comentarios">COMENTARIOS</string>
    <string name="ticket_compra">TICKET DE COMPRA</string>
    <string name="condiciones">CONDICIONES DE TRASLADO</string>
    <string name="menu_editarinforme">EDITAR INFORME</string>
    <string name="menu_lista_visitas">Preinformes</string>
    <string name="foto_fachada">FACHADA</string>
    <string name="ubicación">UBICACION</string>
    <string name="agregar_exhibido">AGREGAR PRODUCTO EXHIBIDO</string>
    <string name="muestras">MUESTRAS</string>
    <string name="menu_nuevo_informe">Nuevo informe</string>
    <string name="editar_informe">EDITAR INFORME</string>
    <string name="nuevo_informe">NUEVO INFORME</string>
    <string name="delete_muestra_message">La muestra se eliminó correctamente</string>
    <string name="conf_finalizar">¿ESTÁ SEGURO? TOME EN CUENTA QUE NO PODRÁ ELABORAR MÁS INFORMES CON LOS DATOS DE LA TIENDA</string>
    <string name="salir_sin_guardar">SI SALE SIN GUARDAR PERDERÁ SU INFORMACIÓN</string>
    <string name="fin_informe">SE FINALIZÓ EL INFORME</string>
    <string name="pregunta_mas_clientes">¿COMPRO PRODUCTO PARA OTROS CLIENTES?</string>
    <string name="menu_ciudad_trabajo">Ciudad de trabajo</string>
    <string name="informes">INFORMES</string>
    <string name="no_eliminar_visita">No puede eliminar este informe</string>
    <string name="elige_una_opcion">ELIJA UNA OPCIÓN</string>
    <string name="elige_un_criterio">ELIJA UN CRITERIO</string>
    <string name="error_siglas">LAS SIGLAS SON INCORRETAS, VERFIQUE</string>
    <string name="error_fecha">LA FECHA DE CADUCIDAD DEBE SER MAYOR A 30 DIAS</string>
    <string name="error_fecha_formato">INTRODUZCA UNA FECHA VÁLIDA Y EN FORMATO dd-mm-aa</string>
    <string name="error_fecha_caduca">MUESTRA CADUCADA, VERIFIQUE</string>
    <string name="error_codigo_per">CODIGO NO PERMITIDO</string>
    <string name="siglas_planta">SIGLAS DE PLANTA</string>
    <string name="no_hay_conexion">Sin conexión a internet este módulo no funcionará. Revise su conexión</string>
    <string name="error_fecha_caduca_prox">LA MUESTRA CADUCARÁ EN MENOS DE 30 DÍAS, VERIFIQUE</string>
    <string name="consecutivo">TIENDA</string>
    <string name="consecutivor">CONSECUTIVO</string>
    <string name="fecha">FECHA</string>
    <string name="complementodir">COMPLEMENTO DIRECCION</string>
    <string name="puntocardinal">PUNTO CARDINAL</string>
    <string name="estatus">ESTATUS</string>
    <string name="estatus_envio">ESTATUS ENVIO</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="atencion">ATENCIÓN</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="inicio">INICIO</string>
    <string name="danio1">¿OBSERVAS ALGÚN DAÑO EN LA MUESTRA?</string>
    <string name="danio2">¿OBSERVAS ALGÚN OTRO DAÑO?</string>
    <string name="danio3">¿OBSERVAS ALGÚN OTRO DAÑO?</string>
    <string name="title_activity_continuar_informe">CONTINUAR INFORME</string>
    <string name="title_activity_pruebas">PruebasActivity</string>
    <string name="seleccione_cliente">SELECCIONE EL CLIENTE</string>
    <string name="title_activity_login">Compras</string>
    <string name="prompt_email">CORREO</string>
    <string name="prompt_password">CONTRASEÑA</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">INGRESAR</string>
    <string name="welcome">"¡BIENVENIDO!"</string>
    <string name="invalid_username">CORREO INVALIDO</string>
    <string name="invalid_password">LA CONTRASEÑA DEBE SER MAYOR A 5 CARACTERES</string>
    <string name="login_failed">"USUARIO O CONTRASEÑA INCORRECTOS"</string>
    <string name="ingrese_usuario">ESCRIBA SU USUARIO Y CONTRASEÑA</string>
    <string name="error_sesion">ERROR AL INICIAR SESION</string>
    <string name="menu_home">INICIO</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="menu_correccion">Corrección</string>
    <string name="menu_rescorreccion">Resumen correcciones</string>
    <string name="menu_resumencomp">Resumen compra</string>
    <string name="menu_inicial">Menu inicial</string>
    <string name="eti_destinatario">Destinatario</string>
    <string name="eti_fragil">Fragil</string>
    <string name="eti_contenido">Contenido</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_lista_gas">Resumen Gastos</string>
    <string name="menu_revrecibo">Descargar recibo</string>
</resources>