<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_descargar"
            android:icon="@android:drawable/stat_sys_download"

            android:title="@string/menu_descargar" />
        <item
            android:id="@+id/nav_ciudad_trabajo"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_ciudad_trabajo" />

        <item
            android:id="@+id/nav_sel_planta"
            android:icon="@drawable/ic_baseline_checklist_rtl_24"
            android:title="@string/menu_ver_lista" />

        <item
            android:id="@+id/nav_nvogasto"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_nuevo_informe" />

        <item
            android:id="@+id/nav_continuargas"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_continuar_informe" />
        <item
            android:id="@+id/nav_resumengas"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_lista_gas" />
        <item
            android:id="@+id/nav_revrecibo"
            android:icon="@drawable/ic_baseline_receipt_long_24"
            android:title="@string/menu_revrecibo" />

        <item
            android:id="@+id/nav_notificaciongen"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/menu_notificaciones"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_rescorrenv"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/menu_rescorreccion" />

        <item
            android:id="@+id/nav_menuini"
            android:icon="?attr/actionModeCloseDrawable"
            android:title="@string/menu_inicial"
            />
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"

            android:title="@string/cerrar_sesion" />

    </group>
</menu>