<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_configurar">

    <fragment
        android:id="@+id/nav_configurar"
        android:name="com.example.comprasmu.ui.home.HomeFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_ciudad_trabajo"
        android:name="com.example.comprasmu.ui.mantenimiento.CiudadTrabajoFragment"
        android:label="@string/menu_ciudad_trabajo"
        tools:layout="@layout/ciudad_trabajo_fragment" >
    <action android:id="@+id/action_ciudadtohome"
        app:destination="@id/nav_configurar"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/nav_descargar"
        android:name="com.example.comprasmu.ui.informe.NuevoinformeFragment"
        android:label="@string/menu_borrar"
        tools:layout="@layout/fragment_nuevoinforme" />

    <fragment
        android:id="@+id/nav_sel_planta"
        android:name="com.example.comprasmu.ui.SelPlantaFragment"
        android:label="@string/menu_ver_lista"
        tools:layout="@layout/lista_selec_fragment" >

    <action android:id="@+id/action_selclientetolistacompras"
        app:destination="@id/nav_listacompras"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/nav_listacompras"
        android:name="com.example.comprasmu.ui.listacompras.TabsFragment"
        android:label="@string/menu_ver_lista"
        tools:layout="@layout/lista_selec_fragment" />
    <fragment
        android:id="@+id/nav_nuevoinforme"
        android:name="com.example.comprasmu.ui.visita.AbririnformeFragment"
        android:label="@string/menu_abrir_informe"
        tools:layout="@layout/fragment_abririnforme">
        <action android:id="@+id/action_continuar"
            app:destination="@id/nav_continuar"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_nuevotolista"
            app:destination="@id/nav_listarvisitas"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

</fragment>


    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.comprasmu.ui.informe.ListaInformesFragment"
        android:label="@string/menu_lista_informe"
        tools:layout="@layout/lista_informes_fragment" />
    <fragment
        android:id="@+id/nav_listarvisitas"
        android:name="com.example.comprasmu.ui.visita.ListaVisitasFragment"
        android:label="@string/menu_lista_visitas"
        tools:layout="@layout/lista_informes_fragment" >
    <action android:id="@+id/action_visitatonuevo"
        app:destination="@id/nav_continuar"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/nav_continuar"
        android:name="com.example.comprasmu.ui.informe.NuevoinformeFragment"
        android:label="@string/menu_nuevo_informe"
        tools:layout="@layout/fragment_nuevoinforme" >
        <action android:id="@+id/action_informetolista"
            app:destination="@id/nav_listar"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>
    <fragment
        android:id="@+id/nav_editar_informe"
        android:name="com.example.comprasmu.ui.informe.VerInformeFragment"
        android:label="@string/menu_editarinforme"
        tools:layout="@layout/ver_informe_fragment" >


    </fragment>
    <fragment
        android:id="@+id/nav_borrarinformes"
        android:name="com.example.comprasmu.ui.mantenimiento.BorrarDatosFragment"
        android:label="@string/menu_borrar_informe"
        tools:layout="@layout/borrar_datos_fragment" >
        <argument
            android:name="comprasmu.tipodata"
            app:argType="string"
            android:defaultValue="informe" />

    </fragment>
    <fragment
        android:id="@+id/nav_borrarcompras"
        android:name="com.example.comprasmu.ui.mantenimiento.BorrarDatosFragment"
        android:label="@string/menu_borrar_lista"
        tools:layout="@layout/borrar_datos_fragment" >
        <argument
            android:name="comprasmu.tipodata"
            app:argType="string"
            android:defaultValue="compra" />

    </fragment>

</navigation>