<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.comprasmu.ui.tiendas.BuscarTiendaViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tiendas.BuscarTiendaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/formlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad" />

    <EditText
        android:id="@+id/btspciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

        <TextView
            android:id="@+id/textView7"
            style="@style/formlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tipo_tienda" />

    <Spinner
        android:id="@+id/btsptipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView8"
            style="@style/formlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_tienda" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/btetnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />

            <Button
                android:id="@+id/btbtnbuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtbtsindatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/btrvtiendas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />


    </LinearLayout>

</FrameLayout>
</layout>